2006-06-08 [colin]	2.2.3cvs3

	* src/etpan/imap-thread.c
		Fix leak on SSL cert check

2006-06-08 [colin]	2.2.3cvs2

	* src/common/utils.c
		Fix leak

2006-06-08 [paul]	2.2.3cvs1

	* configure.ac
		Update version number following
		stable release

2006-06-07 [colin]	2.2.2cvs3

	* src/msgcache.c
		Fix catching cache read errors (guint instead of gint)
		Prevent malloc'ing more than 8MB (means cache corruption)

2006-06-07 [paul]	2.2.2cvs2

	* src/exporthtml.c
	* src/exportldif.c
	* src/mh.c
	* src/mutt.c
	* src/pine.c
	* src/common/utils.c
		fix Debian bug #370257, 'sylpheed-claws-gtk2 does not
		obey $HOME'
		http://bugs.debian.org/cgi-bin/bugreport.cgi?bug=370257
		Thanks to Colin

2006-06-06 [paul]	2.2.2cvs1

	* configure.ac
		Update version number following
		stable release

2006-06-06 [paul]	2.2.1cvs6

	* src/matcher.c
		fix  implicit declaration of
		sylpheed_do_idle()
		Patch by Fabien Vantard

2006-06-06 [paul]	2.2.1cvs5

	* src/matcher.c
		fix age_greater and age_lower so that they
		mean what say and not '...or equal to'
		Thanks to Colin

2006-06-06 [paul]	2.2.1cvs4

	* src/textview.c
	* src/common/utils.c
		fix URI check
		Thanks to Colin

2006-06-05 [wwp]	2.2.1cvs3

	* manual/fr/account.xml
		minor language fixes (thanks to Fabien Vantard).

2006-06-05 [colin]	2.2.1cvs2

	* src/prefs_folder_item.c
	* src/folderview.c
		Allow recursive setting of properties 
		for whole mailboxes
	* src/matcher.c
		Don't freeze on 'test' filtering rule

2006-06-05 [colin]	2.2.1cvs1

	* configure.ac
		Update version number following
		stable release

2006-06-04 [wwp]	2.2.0cvs82

	* manual/glossary.xml
	* manual/account.xml
	* manual/fr/glossary.xml
	* manual/fr/account.xml
		added glossary section and references/links related to the Face custom header.

2006-06-04 [colin]	2.2.0cvs81

	* src/summaryview.c
		Skip to next message on move with no
		immediate execution

2006-06-04 [wwp]	2.2.0cvs80

	* manual/xml2pdf
		added sanity checks, exit when needed.
