@@ -1564,3 +1564,4 @@
 ( cvs diff -u -r 1.654.2.1606 -r 1.654.2.1607 configure.ac;  ) > 2.2.3cvs1.patchset
 ( cvs diff -u -r 1.36.2.65 -r 1.36.2.66 src/common/utils.c;  ) > 2.2.3cvs2.patchset
 ( cvs diff -u -r 1.1.4.39 -r 1.1.4.40 src/etpan/imap-thread.c;  ) > 2.2.3cvs3.patchset
+( cvs diff -u -r 1.8.2.10 -r 1.8.2.11 README;  cvs diff -u -r 1.1.2.4 -r 1.1.2.5 manual/ack.xml;  cvs diff -u -r 1.1.2.19 -r 1.1.2.20 src/gtk/authors.h;  ) > 2.2.3cvs4.patchset
