@@ -14,6 +14,9 @@
     <listitem><para>
 	<ulink url="mailto:mones@aic.uniovi.es">Ricardo Mones</ulink>
     </para></listitem>
+    <listitem><para>
+	<ulink url="mailto:subscript@free.fr">wwp</ulink>
+    </para></listitem>
     </itemizedlist>
     <para>
 	Thanks to:
